new design -added responsive

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/67a0cf542b.js" crossorigin="anonymous"></script>
-
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
@@ -29,7 +28,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top bar">
         <div class="container">
             <a class="navbar-brand" href="#">Karen Perez</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -45,7 +44,7 @@
                         <a class="nav-link" href="about.html">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Me</a>
+                        <a class="nav-link" href="/about.html#contact">Contact Me</a>
                     </li>
 
                 </ul>
@@ -65,73 +64,77 @@
         Here are my featured projects!
     </p>
     <div class="projects">
-        <div class="row ">
+        <div class="row text-center">
             <div class="col-6 d-none d-lg-block">
                 <img class="img-thumbnail img-fluid image" src="images/adoption.png" alt="adoption">
             </div>
-            <div class="col-sm-5">
+            <div class="col-lg-6">
                 <p class="parragraph">
                     Adoption landing page
                 </p>
                 <p class="m-5">
-                    Styling an HTML page with CSS using a popular coding technology such as Visual Studio Code.th CSS
+                    Styling an HTML page with CSS using a popular coding technology such as Visual Studio
+                    Code.th CSS
                     using a popular coding technology such as Visual Studio Code.th CSS using a popular coding
                     technology such as Visual Studio Code.
                 </p>
-
-                </br>
                 <a href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/000/816/629/original/Final_Project_Perez.html?1650582373"
-                    class="btn border button">Launch
+                    class="btn border btn-lg button ">Launch
                     Adoption APP</a>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-5 ">
+        <div class="row text-center mt-5">
+            <div class="col-lg-6">
                 <p class="parragraph">
                     React-Weather App
                 </p>
                 <p class="m-5">
-                    Using bootstrap, real-life development workflow, hosting, and advanced JavaScript. I combined all of
+                    Using bootstrap, real-life development workflow, hosting, and advanced JavaScript. I
+                    combined all of
                     these skills to create a fully-functioning weather app.
                 </p>
-                </br>
-                <a href="https://master--reliable-malabi-e4012b.netlify.app/" class="btn border button">Launch Weather
+
+                <a href="https://master--reliable-malabi-e4012b.netlify.app/" class="btn border btn-lg button">Launch
+                    Weather
                     app</a>
             </div>
-            <div class="col-sm-6 d-none d-lg-block">
-                <img class="img-thumbnail img-fluid image" src="images/weather.png" alt="adoption">
+            <div class="col-sm-6 d-none d-lg-block align-self-center ">
+                <img class="img-thumbnail img-fluid image w-75 " src="images/weather.png" alt="adoption">
 
 
             </div>
         </div>
 
-        <div class="row  ">
-            <div class="col-sm-6 d-none d-lg-block ">
-                <img class="img-thumbnail img-fluid max-width:70%; image" src="images/dictionary.png" alt="adoption">
+        <div class="row text-center mt-5">
+            <div class="col-sm-6 d-none d-lg-block align-self-center ">
+                <img class="img-thumbnail img-fluid w-50 image" src="images/dictionary.png" alt="adoption">
             </div>
-            <div class="col-sm-5 ">
+            <div class="col-lg-6">
 
                 <p class="parragraph">
                     React-Dictionary app
                 </p>
                 <p class="m-5">
-                    Once again using bootstrap, real-life development workflow, hosting, and advanced JavaScript. I
+                    Once again using bootstrap, real-life development workflow, hosting, and advanced
+                    JavaScript. I
                     combined
                     all of
                     these skills to create a fully-functioning Dictionary app.
                 </p>
-                </br>
-                <a href="https://glowing-mandazi-ab3ad3.netlify.app/ " class="btn border button">Launch Dictionary
+
+                <a href="https://glowing-mandazi-ab3ad3.netlify.app/ " class="btn border btn-lg button">Launch
+                    Dictionary
                     app</a>
 
             </div>
         </div>
+        <div class="row text-center">
+            <div class="col-12 mt-5 mb-5">
+                <i class="fa-brands fa-instagram icon"></i>
+            </div>
+        </div>
     </div>
 
-    <i class="fa-brands fa-instagram"></i>
-
-
-    </div>
 </body>
 
 </html>
