--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top bar">
         <div class="container">
             <a class="navbar-brand" href="#">Karen Perez</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="about.html">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Me</a>
+                        <a class="nav-link" href="/about.html#contact">Contact Me</a>
                     </li>
 
                 </ul>
@@ -55,32 +55,30 @@
     </br>
 
 
-    <div class="row">
-        <h1>
+    <div class="row hero">
+        <h2>
             ABOUT ME
-        </h1>
-    </div>
-    </br>
-    <div class="row header">
-        <h2>Karen Perez</h2>
+        </h2>
+        <h1>Karen Perez</h1>
         <h3>Electronics Engineer & Front-end developer, based in U.S.</h3>
     </div>
-    </br>
     <div class="row">
         <div class="col">
 
         </div>
     </div>
     </br>
-    <div class="projects-display">
+
+    <div class="text-center" id="contact">
         <h1>
             📧 Contact Me
         </h1>
 
-        <a href="mailto:karenjperez03@gmail.com">karenjperez03@gmail.com</a>
+        <a class="email" href="mailto:karenjperez03@gmail.com">karenjperez03@gmail.com</a>
     </div>
 
     </div>
+
 </body>
 
 </html>
