creating about page

--- a/about.html
+++ b/about.html
@@ -30,52 +30,81 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top bar">
-        <div class="container">
-            <a class="navbar-brand" href="#">Karen Perez</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About Me</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about.html#contact">Contact Me</a>
-                    </li>
 
-                </ul>
-            </div>
+        <a class="navbar-brand" href="#">Karen Perez</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About Me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about.html#contact">Contact Me</a>
+                </li>
+
+            </ul>
+        </div>
     </nav>
     </div>
     </br>
+    <div class="container">
+        <div class="about-section">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h1 class="mb-5"> Hi I am Karen Perez</h1>
+                    <h3 class="mb-5">Electronics Engineer & Front-end developer, based in U.S.</h3>
+                    <p>
+                        Bilingual (English & Spanish) Electronic Engineer with full-scale software development
+                        experience as
+                        well as
+                        Disciplined
+                        Agile Scrum Master (DASM). Experienced in HTML, CSS, JavaScript, GitHub, Netlify, React, and
+                        Bootstrap.
+                        Critical
+                        and
+                        analytical professional with a great capacity to take on new challenges. Knowledgeable,
+                        efficient,
+                        honest,
+                        responsible,
+                        and committed to individual and team success. Experienced skills to direct operations, functions
+                        of
+                        management
+                        of both
+                        human and technical resources through a positive environment.
+                    </p>
+                    <a href="" class="btn border btn-lg button mb-5">
+                        See my projects
+                    </a>
+                </div>
+                <div class="col-lg-6">
+                    <img src="/images/karen.jpg" alt="karen photo" class="img-fluid w-75" />
+                </div>
 
-
-    <div class="row hero">
-        <h2>
-            ABOUT ME
-        </h2>
-        <h1>Karen Perez</h1>
-        <h3>Electronics Engineer & Front-end developer, based in U.S.</h3>
-    </div>
-    <div class="row">
-        <div class="col">
+            </div>
 
         </div>
-    </div>
-    </br>
 
-    <div class="text-center" id="contact">
-        <h1>
-            📧 Contact Me
-        </h1>
+        <div class="row">
+            <div class="col">
 
-        <a class="email" href="mailto:karenjperez03@gmail.com">karenjperez03@gmail.com</a>
-    </div>
+            </div>
+        </div>
+
+        </br>
+
+        <div class="text-center" id="contact">
+            <h1>
+                📧 Contact Me
+            </h1>
+
+            <a class="email" href="mailto:karenjperez03@gmail.com">karenjperez03@gmail.com</a>
+        </div>
 
     </div>
 
