--- a/work.html
+++ b/work.html
@@ -18,7 +18,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/67a0cf542b.js" crossorigin="anonymous"></script>
-
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
@@ -54,62 +53,49 @@
             </ul>
         </div>
     </nav>
-    </div>
-    </br>
-    <div class="container">
-        <div class="about-section">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h1 class="mb-5"> Hi I am Karen Perez</h1>
-                    <h3 class="mb-5">Electronics Engineer & Front-end developer, based in U.S.</h3>
-                    <p>
-                        Bilingual (English & Spanish) Electronic Engineer with full-scale software development
-                        experience as
-                        well as
-                        Disciplined
-                        Agile Scrum Master (DASM). Experienced in HTML, CSS, JavaScript, GitHub, Netlify, React, and
-                        Bootstrap.
-                        Critical
-                        and
-                        analytical professional with a great capacity to take on new challenges. Knowledgeable,
-                        efficient,
-                        honest,
-                        responsible,
-                        and committed to individual and team success. Experienced skills to direct operations, functions
-                        of
-                        management
-                        of both
-                        human and technical resources through a positive environment.
-                    </p>
-                    <a href="" class="btn border btn-lg button mb-5">
-                        See my projects
-                    </a>
-                </div>
-                <div class="col-lg-6">
-                    <img src="/images/karen.jpg" alt="karen photo" class="img-fluid w-75" />
-                </div>
+    <div class="container works">
 
-            </div>
-
-        </div>
-
+        <h1>
+            Take a look at what I've been working on! </h1>
         <div class="row">
-            <div class="col">
+            <div class="col-lg-6">
+                <img src="/images/adoption.png" alt="adoption app" class="img-fluid w-50 ">
+                <h3>
+                    Adoption Project
+                </h3>
+                <p class="text-center">
+                    Built with HTML and CSS
+                </p>
+            </div>
+            <div class="col-lg-6 mt-3">
+                <img src="/images/dictionary.png" alt="adoption app" class="img-fluid dictionary w-50 h-75 ">
+
+                <h3>
+                    Adoption Project
+                </h3>
+                <p class="text-center">
+                    Built with HTML and CSS
+                </p>
+            </div>
+        </div>
+        <div class="row text-center ">
+            <div class="col-lg-12 mt-5">
+                <img src="/images/weather.png" alt="weather app" class="img-fluid w-50 h-75 weather">
+                <h3>
+                    Weather app Project
+                </h3>
+                <p>
+                    Built with HTML and CSS
+                </p>
 
             </div>
         </div>
-
-        </br>
-
-        <div class="text-center" id="contact">
-            <h1>
-                📧 Contact Me
-            </h1>
-
-            <a class="email" href="mailto:karenjperez03@gmail.com">karenjperez03@gmail.com</a>
-        </div>
-
     </div>
+    </div>
+
+
+
+
 
 </body>
 
