contact me page

--- a/index.html
+++ b/index.html
@@ -62,81 +62,82 @@
         <h1 class="fw-bold">Karen Perez</h1>
         <h3>Electronics Engineer & Front-end developer, based in U.S.</h3>
     </div>
-    <div class="container"></div>
-    <p class="parragraph">
-        Here are my featured projects!
-    </p>
-    <div class="projects">
-        <div class="row text-center">
-            <div class="col-6 d-none d-lg-block">
-                <img class="img-thumbnail img-fluid image" src="images/adoption.png" alt="adoption">
+    <div class="container">
+        <p class="parragraph">
+            Here are my featured projects!
+        </p>
+        <div class="projects">
+            <div class="row text-center">
+                <div class="col-6 d-none d-lg-block">
+                    <img class="img-thumbnail img-fluid image" src="images/adoption.png" alt="adoption">
+                </div>
+                <div class="col-lg-6">
+                    <p class="parragraph">
+                        Adoption landing page
+                    </p>
+                    <p class="mx-5 text">
+                        Styling an HTML page with CSS using a popular coding technology such as Visual Studio
+                        Code.th CSS
+                        using a popular coding technology such as Visual Studio Code.th CSS using a popular coding
+                        technology such as Visual Studio Code.
+                    </p>
+                    <a href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/000/816/629/original/Final_Project_Perez.html?1650582373"
+                        class="btn border btn-lg button ">Launch
+                        Adoption APP</a>
+                </div>
             </div>
-            <div class="col-lg-6">
-                <p class="parragraph">
-                    Adoption landing page
-                </p>
-                <p class="mx-5 text">
-                    Styling an HTML page with CSS using a popular coding technology such as Visual Studio
-                    Code.th CSS
-                    using a popular coding technology such as Visual Studio Code.th CSS using a popular coding
-                    technology such as Visual Studio Code.
-                </p>
-                <a href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/000/816/629/original/Final_Project_Perez.html?1650582373"
-                    class="btn border btn-lg button ">Launch
-                    Adoption APP</a>
+            <div class="row text-center mt-5">
+                <div class="col-lg-6">
+                    <p class="parragraph">
+                        React-Weather App
+                    </p>
+                    <p class="mx-5 text">
+                        Using bootstrap, real-life development workflow, hosting, and advanced JavaScript. I
+                        combined all of
+                        these skills to create a fully-functioning weather app.
+                    </p>
+
+                    <a href="https://master--reliable-malabi-e4012b.netlify.app/"
+                        class="btn border btn-lg button">Launch
+                        Weather
+                        app</a>
+                </div>
+                <div class="col-sm-6 d-none d-lg-block align-self-center ">
+                    <img class="img-thumbnail img-fluid image w-75 " src="images/weather.png" alt="adoption">
+
+
+                </div>
+            </div>
+
+            <div class="row text-center mt-5">
+                <div class="col-sm-6 d-none d-lg-block align-self-center ">
+                    <img class="img-thumbnail img-fluid w-50 image" src="images/dictionary.png" alt="adoption">
+                </div>
+                <div class="col-lg-6">
+
+                    <p class="parragraph">
+                        React-Dictionary app
+                    </p>
+                    <p class="mx-5 text">
+                        Once again using bootstrap, real-life development workflow, hosting, and advanced
+                        JavaScript. I
+                        combined
+                        all of
+                        these skills to create a fully-functioning Dictionary app.
+                    </p>
+
+                    <a href="https://glowing-mandazi-ab3ad3.netlify.app/ " class="btn border btn-lg button">Launch
+                        Dictionary
+                        app</a>
+
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-12 mt-5 mb-5">
+                    <i class="fa-brands fa-instagram icon"></i>
+                </div>
             </div>
         </div>
-        <div class="row text-center mt-5">
-            <div class="col-lg-6">
-                <p class="parragraph">
-                    React-Weather App
-                </p>
-                <p class="mx-5 text">
-                    Using bootstrap, real-life development workflow, hosting, and advanced JavaScript. I
-                    combined all of
-                    these skills to create a fully-functioning weather app.
-                </p>
-
-                <a href="https://master--reliable-malabi-e4012b.netlify.app/" class="btn border btn-lg button">Launch
-                    Weather
-                    app</a>
-            </div>
-            <div class="col-sm-6 d-none d-lg-block align-self-center ">
-                <img class="img-thumbnail img-fluid image w-75 " src="images/weather.png" alt="adoption">
-
-
-            </div>
-        </div>
-
-        <div class="row text-center mt-5">
-            <div class="col-sm-6 d-none d-lg-block align-self-center ">
-                <img class="img-thumbnail img-fluid w-50 image" src="images/dictionary.png" alt="adoption">
-            </div>
-            <div class="col-lg-6">
-
-                <p class="parragraph">
-                    React-Dictionary app
-                </p>
-                <p class="mx-5 text">
-                    Once again using bootstrap, real-life development workflow, hosting, and advanced
-                    JavaScript. I
-                    combined
-                    all of
-                    these skills to create a fully-functioning Dictionary app.
-                </p>
-
-                <a href="https://glowing-mandazi-ab3ad3.netlify.app/ " class="btn border btn-lg button">Launch
-                    Dictionary
-                    app</a>
-
-            </div>
-        </div>
-        <div class="row text-center">
-            <div class="col-12 mt-5 mb-5">
-                <i class="fa-brands fa-instagram icon"></i>
-            </div>
-        </div>
-    </div>
 
 </body>
 
