--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                     <a class="nav-link" href="/work.html">Works</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/about.html#contact">Contact Me</a>
+                    <a class="nav-link" href="/contact.html">Contact Me</a>
                 </li>
 
             </ul>
@@ -101,12 +101,12 @@
 
         </br>
 
-        <div class="text-center" id="contact">
-            <h1>
+        <div class="text-center">
+            <h4>
                 📧 Contact Me
-            </h1>
+            </h4>
 
-            <a class="email" href="mailto:karenjperez03@gmail.com">karenjperez03@gmail.com</a>
+            <a class="email" href="mailto:karenjperez03@gmail.com" target="_blank">karenjperez03@gmail.com</a>
         </div>
 
     </div>
