--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,35 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top bar">
+        <div class="container">
+            <a class="navbar-brand" href="#">Karen Perez</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/work.html">Works</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact.html">Contact Me</a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+
+    </nav>
+    </div>
+
     <div class="contact text-center m-5">
         <h1>
             Let's get in touch!
@@ -37,13 +66,24 @@
         <h4>
             Email
         </h4>
+        </br>
         <p>
             <a href="mailto:karenjperez03@gmail.com" target="_blank" class="email"> karenjperez03@gmail.com </a>
         </p>
-        <h5 class="contact">Instagram</h5>
-        <p>
-            <a href="https://www.instagram.com/karenj6670/?r=nametag" target="_blank" class="email">karenj6670</a>
-        </p>
+
+    </div>
+
+    <div class="footer text-center footer-contact">
+
+        <a href="https://www.instagram.com/karenj6670/?r=nametag" target="_blank" class="social-links"><i
+                class="fa-brands fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/karen-perez-a5a793156/" target="_blank" class="social-links">
+            <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <a href="https://github.com/KarenJPerez1280" target="_blank" class="social-links">
+            <i class="fa-brands fa-github"></i></a>
+
+
     </div>
 
 
