--- a/index.html
+++ b/index.html
@@ -28,29 +28,31 @@
 </head>
 
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top bar">
+        <div class="container">
+            <a class="navbar-brand" href="#">Karen Perez</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/work.html">Works</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact.html">Contact Me</a>
+                    </li>
 
-        <a class="navbar-brand" href="#">Karen Perez</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">About Me</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/work.html">Works</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/about.html#contact">Contact Me</a>
-                </li>
-
-            </ul>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -132,10 +134,18 @@
 
                 </div>
             </div>
-            <div class="row text-center">
-                <div class="col-12 mt-5 mb-5">
-                    <i class="fa-brands fa-instagram icon"></i>
-                </div>
+
+            <div class="footer text-center">
+
+                <a href="https://www.instagram.com/karenj6670/?r=nametag" target="_blank" class="social-links"><i
+                        class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/karen-perez-a5a793156/" target="_blank" class="social-links">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a href="https://github.com/KarenJPerez1280" target="_blank" class="social-links">
+                    <i class="fa-brands fa-github"></i></a>
+
+
             </div>
         </div>
 
