--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="styles.css">
-    <title>Karen-Perez</title>
+    <meta name="description"
+        content="Karen is an Electronic Engineer and, front-end developer based in United States. ">
+    <title>front-end developer Karen-Perez</title>
+
 </head>
 
 <body>
@@ -39,16 +42,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html" title="homepage">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About Me</a>
+                        <a class="nav-link" href="about.html" title="about page">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/work.html">Works</a>
+                        <a class="nav-link" href="/work.html" title="works page">Works</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact Me</a>
+                        <a class="nav-link" href="/contact.html" title="contact page">Contact Me</a>
                     </li>
 
                 </ul>
@@ -71,7 +74,7 @@
         <div class="projects">
             <div class="row text-center">
                 <div class="col-6 d-none d-lg-block">
-                    <img class="img-thumbnail img-fluid image" src="images/adoption.png" alt="adoption">
+                    <img class="img-thumbnail img-fluid image" src="images/adoption.png" alt="adoption project view">
                 </div>
                 <div class="col-lg-6">
                     <p class="parragraph">
@@ -105,7 +108,8 @@
                         app</a>
                 </div>
                 <div class="col-sm-6 d-none d-lg-block align-self-center ">
-                    <img class="img-thumbnail img-fluid image w-75 " src="images/weather.png" alt="adoption">
+                    <img class="img-thumbnail img-fluid image w-75 " src="images/weather.png"
+                        alt="weather project view">
 
 
                 </div>
@@ -113,7 +117,8 @@
 
             <div class="row text-center mt-5">
                 <div class="col-sm-6 d-none d-lg-block align-self-center ">
-                    <img class="img-thumbnail img-fluid w-50 image" src="images/dictionary.png" alt="adoption">
+                    <img class="img-thumbnail img-fluid w-50 image" src="images/dictionary.png"
+                        alt="Dictionary project view">
                 </div>
                 <div class="col-lg-6">
 
