--- a/about.html
+++ b/about.html
@@ -25,7 +25,9 @@
         crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="styles.css">
-    <title>Karen-Perez</title>
+    <meta name="description"
+        content="About Karen Perez, an Electronic Engineer and, front-end developer based in United States. ">
+    <title>About Karen-Perez</title>
 </head>
 
 <body>
@@ -39,16 +41,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link " aria-current="page" href="index.html" title="homepage">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About Me</a>
+                        <a class="nav-link active" href="about.html" title="about page">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/work.html">Works</a>
+                        <a class="nav-link" href="/work.html" title="works page">Works</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact Me</a>
+                        <a class="nav-link" href="/contact.html" title="contact page">Contact Me</a>
                     </li>
 
                 </ul>
@@ -88,7 +90,7 @@
                     </a>
                 </div>
                 <div class="col-lg-6">
-                    <img src="/images/karen.jpg" alt="karen photo" class="img-fluid w-75" />
+                    <img src="/images/karen.jpg" alt="Karen Perez photo" class="img-fluid w-75" />
                 </div>
 
             </div>
