--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="styles.css">
-    <title>Karen-Perez</title>
+    <title>Contact Karen-Perez</title>
 </head>
 
 <body>
@@ -39,18 +39,17 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link " aria-current="page" href="index.html" title="homepage">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About Me</a>
+                        <a class="nav-link" href="about.html" title="about page">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/work.html">Works</a>
+                        <a class="nav-link" href="/work.html" title="works page">Works</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact Me</a>
+                        <a class="nav-link active" href="/contact.html" title="contact page">Contact Me</a>
                     </li>
-
                 </ul>
             </div>
         </div>
