--- a/work.html
+++ b/work.html
@@ -24,7 +24,8 @@
         crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="styles.css">
-    <title>Karen-Perez</title>
+    <meta name="description" content="Karen pereZ Projects">
+    <title>Karen-Perez projects</title>
 </head>
 
 <body>
@@ -38,16 +39,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link " aria-current="page" href="index.html" title="homepage">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About Me</a>
+                        <a class="nav-link" href="about.html" title="about page">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/work.html">Works</a>
+                        <a class="nav-link active" href="/work.html" title="works page">Works</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact Me</a>
+                        <a class="nav-link" href="/contact.html" title="contact page">Contact Me</a>
                     </li>
 
                 </ul>
@@ -61,7 +62,7 @@
             Take a look at what I've been working on! </h1>
         <div class="row">
             <div class="col-lg-6">
-                <img src="/images/adoption.png" alt="adoption app" class="img-fluid w-50 ">
+                <img src="/images/adoption.png" alt="adoption project view" class="img-fluid w-50 ">
                 <h3>
                     Adoption Project
                 </h3>
@@ -70,7 +71,7 @@
                 </p>
             </div>
             <div class="col-lg-6 mt-3">
-                <img src="/images/dictionary.png" alt="adoption app" class="img-fluid dictionary w-50 h-75 ">
+                <img src="/images/dictionary.png" alt="adoption project view" class="img-fluid dictionary w-50 h-75 ">
 
                 <h3>
                     Adoption Project
@@ -82,7 +83,7 @@
         </div>
         <div class="row text-center ">
             <div class="col-lg-12 mt-5">
-                <img src="/images/weather.png" alt="weather app" class="img-fluid w-50 h-75 weather">
+                <img src="/images/weather.png" alt="weather project view" class="img-fluid w-50 h-75 weather">
                 <h3>
                     Weather app Project
                 </h3>
@@ -105,6 +106,11 @@
 
 
     </div>
+    <p class="text-center mt-4">
+        ✌🏼This project was coded by Karen Perez and it is <a
+            href="https://github.com/KarenJPerez1280/portfolio-Perez2">
+            open-source </a>
+    </p>
     </div>
 
 
