--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
                         of both
                         human and technical resources through a positive environment.
                     </p>
-                    <a href="" class="btn border btn-lg button mb-5">
+                    <a href="/work.html" class="btn border btn-lg button-projects mb-5">
                         See my projects
                     </a>
                 </div>
