--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                         <a class="nav-link active" href="about.html" title="about page">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/work.html" title="works page">Works</a>
+                        <a class="nav-link" href="/work.html" title="works page">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/contact.html" title="contact page">Contact Me</a>
@@ -64,7 +64,7 @@
         <div class="about-section">
             <div class="row">
                 <div class="col-lg-6">
-                    <h1 class="mb-5"> Hi I am Karen Perez</h1>
+                    <h1 class="mb-5"> Hi, I am Karen Perez</h1>
                     <h3 class="mb-5">Electronics Engineer & Front-end developer, based in U.S.</h3>
                     <p>
                         Bilingual (English & Spanish) Electronic Engineer with full-scale software development
