--- a/work.html
+++ b/work.html
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="about.html" title="about page">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/work.html" title="works page">Works</a>
+                        <a class="nav-link active" href="/work.html" title="works page">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/contact.html" title="contact page">Contact Me</a>
@@ -74,7 +74,7 @@
                 <img src="/images/dictionary.png" alt="adoption project view" class="img-fluid dictionary w-50 h-75 ">
 
                 <h3>
-                    Adoption Project
+                    Dictionary Project
                 </h3>
                 <p class="text-center">
                     Built with HTML and CSS
@@ -85,7 +85,7 @@
             <div class="col-lg-12 mt-5">
                 <img src="/images/weather.png" alt="weather project view" class="img-fluid w-50 h-75 weather">
                 <h3>
-                    Weather app Project
+                    Weather App Project
                 </h3>
                 <p>
                     Built with HTML and CSS
