--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="about.html" title="about page">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/work.html" title="works page">Works</a>
+                        <a class="nav-link" href="/work.html" title="works page">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/contact.html" title="contact page">Contact Me</a>
