open-source line

--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,11 @@
         <a href="https://github.com/KarenJPerez1280" target="_blank" class="social-links">
             <i class="fa-brands fa-github"></i></a>
 
-
+        <p class="text-center mt-4">
+            ✌🏼This project was coded by Karen Perez and it is <a class="open-source"
+                href="https://github.com/KarenJPerez1280/portfolio-Perez2">
+                open-source </a>
+        </p>
     </div>
 
 
