--- a/index.html
+++ b/index.html
@@ -152,6 +152,11 @@
 
 
             </div>
+            <p class="text-center mt-4">
+                ✌🏼This project was coded by Karen Perez and it is <a class="open-source"
+                    href="https://github.com/KarenJPerez1280/portfolio-Perez2">
+                    open-source </a>
+            </p>
         </div>
 
 </body>
