--- a/work.html
+++ b/work.html
@@ -107,7 +107,7 @@
 
     </div>
     <p class="text-center mt-4">
-        ✌🏼This project was coded by Karen Perez and it is <a
+        ✌🏼This project was coded by Karen Perez and it is <a class="open-source"
             href="https://github.com/KarenJPerez1280/portfolio-Perez2">
             open-source </a>
     </p>
